RESOLVED FIXED95184
Minor compile fix for WinCE platform
https://bugs.webkit.org/show_bug.cgi?id=95184
Summary Minor compile fix for WinCE platform
Kevin Funk
Reported 2012-08-28 02:55:30 PDT
Issue: D:\devel\src\qt5\qtwebkit\Source\WebCore\platform\ScrollAnimatorNone.cpp(302) : error C2668: 'abs' : ambiguous call to overloaded function d:\devel\src\qt5\qtwebkit\Source\WTF\wtf/MathExtras.h(159): could be '__int64 abs(__int64)' c:\program files (x86)\windows ce tools\sdks\beagleboard-xm - wec7\include\armv4i\stdlib.h(1165): or 'int abs(int)' while trying to match the argument list '(double)' Patch follows.
Attachments
Patch (2.21 KB, patch)
2012-08-28 02:57 PDT, Kevin Funk
no flags
Kevin Funk
Comment 1 2012-08-28 02:57:05 PDT
Kentaro Hara
Comment 2 2012-08-28 03:26:42 PDT
Comment on attachment 160940 [details] Patch ok
WebKit Review Bot
Comment 3 2012-08-28 03:41:47 PDT
Comment on attachment 160940 [details] Patch Clearing flags on attachment: 160940 Committed r126863: <http://trac.webkit.org/changeset/126863>
WebKit Review Bot
Comment 4 2012-08-28 03:41:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.