Compile fix: use fabs() instead of abs() for doubles https://bugs.webkit.org/show_bug.cgi?id=95184

Patch by Kevin Funk <kevin.funk@kdab.com> on 2012-08-28
Reviewed by Kentaro Hara.

Simple compilation fix.

* platform/ScrollAnimatorNone.cpp:

Canonical link: https://commits.webkit.org/113040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126863 268f45cc-cd09-0410-ab3c-d52691b4dbfc